[package]
name = "projroot"
version = "0.1.0"
edition = "2021"
authors = ["James Brown <roguelazer@roguelazer.com>"]
license = "ISC"
description = "Small tool to guess the root directory of the project containing the current working directory"
repository = "https://github.com/roguelazer/projroot"
homepage = "https://github.com/roguelazer/projroot"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.9", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
