[package]
name = "projroot"
version = "0.1.0"
edition = "2021"
authors = ["James Brown <roguelazer@roguelazer.com>"]
license = "ISC"
description = "Small tool to guess the root directory of the project containing the current working directory"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
